alterações do dia 03/05

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="cabecalho">
         <img class="img-cabecalho" src="/img/E & L.png" alt="E & L">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item">Bem-vindos</a>
-            <a class="cabecalho-menu-item">Informações</a>
+            <a href="#bemvindo" class="cabecalho-menu-item">Bem-vindos</a>
+            <a href="#abaInfo" class="cabecalho-menu-item">Informações</a>
             <a class="cabecalho-menu-item">Presentes</a>
             <a class="cabecalho-menu-item">Padrinhos</a>
             <a class="cabecalho-menu-item">Local</a>
@@ -24,93 +24,47 @@
 
     <main>
 
-        <div id="carouselExampleIndicators" class="carousel slide">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item h-100 active" style="background-image: url(img/escolhido-1.png);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 1.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 2.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 3.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 4.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 5.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 6.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 7.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 8.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 9.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 10.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 11.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 12.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 12.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 13.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 15.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 16.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 17.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
+          <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 18.jpeg);background-size:contain; background-repeat: no-repeat; background-position: center;"></div>
 
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15" aria-label="Slide 16"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="16" aria-label="Slide 17"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="17" aria-label="Slide 18"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item h-100 active" style="background-image: url(img/escolhido-1.png); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100 " style="background-image: url(img/ester\ e\ lucas\ 1.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100 " style="background-image: url(img/ester\ e\ lucas\ 2.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 3.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 4.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 5.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 6.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 7.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 8.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 9.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 10.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 11.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 12.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 13.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 14.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 15.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 16.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 17.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-              <div class="carousel-item h-100" style="background-image: url(img/ester\ e\ lucas\ 18.jpeg); background-size:contain; background-repeat: no-repeat; background-position: center;">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        </div>
+      </div>
 
-          <h2 class="sejabem-vindo">Seja Bem-vindos</h2>
+          <h2 id="bemvindo" class="sejabem-vindo">Seja Bem-vindos</h2>
           <div class="seja-bem-vindo">
             <p class="texto-seja-bem-vindo">Siim, vamos nos casar!!<br>
-              Estamos muito felizes de poder compartilhar cada detalhe desse dia com você!<br>
-              Por isso escolhemos criar esse site com muitas informações importantes do nosso dia. </p>
+              Estamos muito felizes em compartilhar cada detalhe desse dia com você!<br>
+              Por isso decidimos criar esse site com as informações importantes do nosso dia.</p>
           </div>
 
 
-          <h2 class="informacoes">Algumas informações</h2>
+          <h2 id="abaInfo" class="informacoes">Algumas informações</h2>
           <div class="algumas-informacoes">
-            <p class="texto-informacoes">Antes de você dar uma olhada no site, temos algumas informações. <br>
-              Nosso casamento é dia 10/03/2024, está próximo. <br>
-              Você é padrinho? Se for, poderá acessar a aba de padrinhos onde terá o seu acesso para poder ver algumas informações mais específicas. <br>
-              Você não é padrinho? Fique tranquilo, você terá acesso às outras páginas do site.<br>
-              Qualquer dúvida que tenha, poderá entrar em contato conosco. </p>
+            <p class="texto-informacoes">Antes de navegar no site, segue algumas informações.<br>
+              Nosso casamento é dia 10/03/2024.<br>
+              Para os padrinhos, no topo da página terá o seu acesso com informações mais específicas.<br>
+              Para os convidados, terá acesso às outras páginas do site.<br>
+              No caso de dúvidas, estamos à disposição!<br>
+              Ester e Lucas. </p>
           </div>
         
     </main>
@@ -118,7 +72,9 @@
     <footer>
 
       <div class="foot">
-
+        <h2 class="ester-lucas">Ester e Lucas</h2>
+        <p class="data">10/03/2024</p>
+        <p class="feito-por-nos">Feito com muito carinho pelos noivos (do zero)</p>
       </div>
 
     </footer>
