alteração de navegação

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="cabecalho-menu">
             <a href="#bemvindo" class="cabecalho-menu-item">Bem-vindos</a>
             <a href="#abaInfo" class="cabecalho-menu-item">Informações</a>
-            <a class="cabecalho-menu-item">Presentes</a>
+            <a href="presentes.html" class="cabecalho-menu-item">Presentes</a>
             <a class="cabecalho-menu-item">Padrinhos</a>
             <a class="cabecalho-menu-item">Local</a>
             <a class="cabecalho-menu-item">Contatos</a>
@@ -70,7 +70,6 @@
     </main>
 
     <footer>
-
       <div class="foot">
         <h2 class="ester-lucas">Ester e Lucas</h2>
         <p class="data">10/03/2024</p>
