--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div class="navbar-nav">
               <a href="#bemvindo" class="nav-link">Bem-vindos</a>
               <a href="#abaInfo" class="nav-link">Informações</a>
-              <a href="presentes.html" class="nav-link">Presentes</a>
-              <a class="nav-link">Padrinhos</a>
-              <a class="nav-link">Local</a>
-              <a class="nav-link">Contatos</a>
+              <a href="/pages/presentes/presentes.html" class="nav-link">Presentes</a>
+              <a href="/pages/padrinhos/padrinhos.html"class="nav-link">Padrinhos</a>
+              <a href="/pages/local/local.html" class="nav-link">Local</a>
+              <a href="/pages/contatos/contatos.html" class="nav-link">Contatos</a>
             </div>
           </div>
         </div>
