--- a/pages/contatos/contatos.html
+++ b/pages/contatos/contatos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/pages/presentes/presentes.css" />
-    <title>Presentes</title>
+    <link rel="stylesheet" type="text/css" href="/pages/contatos/contatos.css" />
+    <title>Contatos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 </head>
 <body>
-
+    
     <header>
         <nav class="navbar navbar-expand-lg cabecalho">
           <div class="container-fluid">
@@ -47,6 +47,6 @@
           </div>
         </nav>
       </header>
-    
+  
 </body>
 </html>
