--- a/pages/local/local.html
+++ b/pages/local/local.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/pages/presentes/presentes.css" />
-    <title>Presentes</title>
+    <link rel="stylesheet" type="text/css" href="/pages/local/local.css" />
+    <title>Local</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 </head>
 <body>
-
+    
     <header>
         <nav class="navbar navbar-expand-lg cabecalho">
           <div class="container-fluid">
@@ -47,6 +47,5 @@
           </div>
         </nav>
       </header>
-    
 </body>
 </html>
