--- a/pages/padrinhos/padrinhos.html
+++ b/pages/padrinhos/padrinhos.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/pages/presentes/presentes.css" />
-    <title>Presentes</title>
+    <link rel="stylesheet" type="text/css" href="/pages/padrinhos/padrinhos.css" />
+    <title>Padrinhos</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 </head>
 <body>
-
+    
     <header>
         <nav class="navbar navbar-expand-lg cabecalho">
           <div class="container-fluid">
@@ -39,7 +39,7 @@
                 <a href="#bemvindo" class="nav-link">Bem-vindos</a>
                 <a href="#abaInfo" class="nav-link">Informações</a>
                 <a href="/pages/presentes/presentes.html" class="nav-link">Presentes</a>
-                <a href="/pages/padrinhos/padrinhos.html"class="nav-link">Padrinhos</a>
+                <a href="/pages/padrinhos/padrinhos.html" class="nav-link">Padrinhos</a>
                 <a href="/pages/local/local.html" class="nav-link">Local</a>
                 <a href="/pages/contatos/contatos.html" class="nav-link">Contatos</a>
               </div>
@@ -47,6 +47,5 @@
           </div>
         </nav>
       </header>
-    
 </body>
 </html>
